--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         </div>
         <div class="nav">
             <div class="container">
-                <div class="logobox"><img src="./images/logo.png" alt=""></div>
+                <div class="logobox"> 
+                    <!-- seo优化 logo套一个h1标签，提高重要性，a需要和父亲一样大，方便用户点击 -->
+                    <h1><a href="" title="小兔鲜儿官网">小兔鲜</a></h1>
+                </div>
                 <div class="middle-nav">
                     <ul>
                         <li><a href="">首页</a></li>
@@ -51,10 +54,44 @@
                     </ul>
                 </div>
                 <!-- 搜索与购物车 -->
-                <div class="search-buy"><input type=text placeholder="搜索您想要的商品" value="" />
+                <div class="search-buy"><input type=text placeholder="搜一搜" value="" />
+                </div>
+                <div class="shopping-car">
+                    <a href=""><div class="goodsnum">3</div></a>
                 </div>
             </div>
         </div>
     </header>
+    <footer>
+        <div class="concat">
+            <div class="container">
+                <div class="service">   
+                    <dl>
+                    <dt >客户服务</dt>
+                    <dd class="kefu">在线客服</dd>
+                    <dd class="question">问题反馈</dd>
+                </dl>
+            </div>
+            <div class="concern">
+                <dl>
+                    <dt >关注我们</dt>
+                    <dd class="gzh">公众号</dd>
+                    <dd class="wb">微博</dd>
+                </dl>
+            </div>
+            <div class="download">
+                <dl>
+                    <dt >下载app</dt>
+                    <dd class="ewm"><img src="./" alt=""></dd>
+                    <dd class="download-page"><p>扫描二维码<pr>立马下载APP</pr><a href="#"></a></dd>
+                </dl>
+            </div>
+             
+                <dl></dl>
+                <dl></dl>
+                
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
