--- a/index.html
+++ b/index.html
@@ -271,7 +271,15 @@
                 </div>
                 <div class="goods-right">
                     <ul>
-                        <li><a href=""></a></li>
+                        
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_1.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_2.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_3.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_4.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_5.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_6.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_7.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
+                        <li><a href=""><div class="img-box"><img src="./uploads/fresh_goods_8.jpg" alt=""></div><h3>美威 智利原味三文鱼排240g/袋 4片装</h3><p><span>¥</span>59</p></a><div class="find"><h5>找相似</h5><a href=""><p>发现更多宝贝</p></a></div></li>
                     </ul>
                 </div>
             </div>
