--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+    <!-- 引入js代码 -->
+    <script src="./js/js-test.js"></script>
 </head>
 <body>
     <!-- 网页头部制作 -->
